# bot-server-manager

./: .env.example  Auwomo-H200 架构设计&机器信息.docx  deploy.sh  explore_slurm.py  openclaw.json  test_write.py
.openclaw/skills/gpu-metrics/: SKILL.md
.openclaw/skills/gpu-metrics/references/: data-schema.md  digua-cluster.md  school-cluster.md
.openclaw/skills/gpu-metrics/scripts/: COLLECTOR-README.md  pyproject.toml  school-collector.example.yaml
.openclaw/skills/gpu-metrics/scripts/gpu_metrics/: __main__.py  config.py  formatters.py  queries.py  queries_school.py
.openclaw/skills/gpu-metrics/scripts/school_collector/: __main__.py  config.py  pusher.py  scraper.py  slurm.py  ssh.py
cli/: pyproject.toml
cli/gpu_metrics/: __main__.py  client.py  formatters.py  queries.py
skill/: skill.yaml
victoria-metrics/: install.sh  victoriametrics.service
