[project]
name = "gpu-metrics"
version = "0.2.0"
description = "GPU cluster metrics: CLI + school HPC collector daemon"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "paramiko>=3.0",
]

[project.scripts]
gpu-metrics = "gpu_metrics.__main__:cli"
school-collector = "school_collector.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
